@@ -47,8 +47,6 @@ define( function( require ) {
     } );
   }
 
-  inherit( ComboBox, SoluteComboBox );
-
   /**
    * Creates an item for the combo box.
    * @param solute
@@ -67,5 +65,5 @@ define( function( require ) {
     return ComboBox.createItem( node, solute );
   };
 
-  return SoluteComboBox;
+  return inherit( ComboBox, SoluteComboBox );
 } );
